# phys

./: .git-lb-checkout  CMakeCache.txt  CMakeLists.txt  DartConfiguration.tcl  Makefile  README.md  build.conf  run  searchPath.py  toolchain.cmake
Phys/CommonParticles/: CMakeLists.txt
Phys/CommonParticles/doc/: release.notes
Phys/CommonParticles/python/CommonParticles/: NoBremNoPIDsDownElectrons.py  NoBremNoPIDsElectrons.py  NoBremNoPIDsTtrackElectrons.py  NoBremNoPIDsUpElectrons.py  NoBremNoPIDsVeloElectrons.py  StandardBasic.py  StandardBasicCharged.py  StandardBasicNeutral.py  StandardD0.py  StandardDiElectron.py  StandardDiMuon.py  StandardDipion.py  StandardDplus.py  StandardDstar.py  StandardElectrons.py  StandardEta.py  StandardIntermediate.py  StandardJets.py  StandardJpsi.py  StandardKaons.py  StandardKstar.py  StandardLambdac.py  StandardLambdastar.py  StandardMuPi.py  StandardMuons.py  StandardPhi.py  StandardPhotons.py  StandardPi0.py  StandardPions.py  StandardProtons.py  StandardRho.py  StandardTau.py  StandardTauNonPhys.py  StandardV0.py  StdAllLooseANNElectrons.py  StdAllLooseANNKaons.py  StdAllLooseANNPions.py  StdAllLooseANNProtons.py  StdAllLooseElectrons.py  StdAllLooseGammaConversion.py  (+116 more)
Phys/CommonParticles/tests/pytest/: test_inputlocations_consistency.py  test_load_modules.py
Phys/DaVinciInterfaces/: CMakeLists.txt
Phys/DaVinciInterfaces/dict/: DaVinciInterfacesDict.h  DaVinciInterfacesDict.xml
Phys/DaVinciInterfaces/include/Kernel/: GetIDVAlgorithm.h  IBTaggingTool.h  IBremAdder.h  ICaloParticleMaker.h  IChangePIDTool.h  ICheckOverlap.h  ICheckSelResults.h  IConstituentSubtractor.h  IDVAlgorithm.h  IDecayFinder.h  IDecayTreeFit.h  IDecodeSimpleDecayString.h  IDirectionFit.h  IDistanceCalculator.h  IExtraInfoTool.h  IFilterParticles.h  IJetMaker.h  IJets2Jets.h  ILifetimeFitter.h  IMassFit.h  IP2VVAngleCalculator.h  IP2VVPartAngleCalculator.h  IPVReFitter.h  IParticle2State.h  IParticleArrayFilter.h  IParticleCombiner.h  IParticleDescendants.h  IParticleDictTool.h  IParticleFilter.h  IParticleIsolation.h  IParticleMaker.h  IParticleReFitter.h  IParticleStuffer.h  IParticleTisTos.h  IParticleTransporter.h  IParticleTupleTool.h  IParticleValue.h  IParticleVeto.h  IPlotTool.h  IPrintDecay.h  (+13 more)
Phys/DaVinciInterfaces/src/: DaVinciInterfaces.cpp  GetIDVAlgorithm.cpp
Phys/DecayTreeTuple/: CMakeLists.txt
Phys/DecayTreeTuple/doc/: release.notes
Phys/DecayTreeTuple/python/DecayTreeTuple/: Configuration.py
Phys/DecayTreeTuple/src/: TupleToolAllTracks.cpp  TupleToolAllTracks.h  TupleToolAngles.cpp  TupleToolAngles.h  TupleToolBeamSpot.cpp  TupleToolBeamSpot.h  TupleToolBremInfo.cpp  TupleToolBremInfo.h  TupleToolBs2MuMuIso2.cpp  TupleToolBs2MuMuIso2.h  TupleToolCaloDigits.cpp  TupleToolCaloDigits.h  TupleToolCaloHypo.cpp  TupleToolCaloHypo.h  TupleToolCentrality.cpp  TupleToolCentrality.h  TupleToolCorrectedMass.cpp  TupleToolCorrectedMass.h  TupleToolDOCA.cpp  TupleToolDOCA.h  TupleToolDecayTreeFitter.cpp  TupleToolDecayTreeFitter.h  TupleToolDira.cpp  TupleToolDira.h  TupleToolGeometry.cpp  TupleToolGeometry.h  TupleToolHOP.cpp  TupleToolHOP.h  TupleToolIsoGeneric.cpp  TupleToolIsoGeneric.h  TupleToolIsolationTwoBody.cpp  TupleToolIsolationTwoBody.h  TupleToolKinematic.cpp  TupleToolKinematic.h  TupleToolMassHypo.cpp  TupleToolMassHypo.h  TupleToolMultiplicity.cpp  TupleToolMultiplicity.h  TupleToolNeutrinoReco.cpp  TupleToolNeutrinoReco.h  (+30 more)
Phys/DecayTreeTuple/tests/: test_configuration_methods.py  test_tupletooldoca.py
Phys/DecayTreeTupleJets/: CMakeLists.txt
Phys/DecayTreeTupleJets/src/: TupleToolJetRelations.cpp  TupleToolJetRelations.h  TupleToolJetTag.cpp  TupleToolJetTag.h  TupleToolJets.cpp  TupleToolJets.h  TupleToolJetsBase.cpp  TupleToolJetsBase.h  TupleToolJetsForB.cpp  TupleToolJetsForB.h  TupleToolWZJets.cpp  TupleToolWZJets.h
Phys/JetAccessories/: CMakeLists.txt
Phys/JetAccessories/dict/: JetAccessories.xml  JetAccessoriesDict.h
Phys/JetAccessories/doc/: release.notes
Phys/JetAccessories/include/Kernel/: JetEnums.h  PFCaloCluster.h  PFParticle.h
Phys/JetAccessories/python/JetAccessories/: HltJetConf.py  JetMaker_Config.py  OldJetMaker_Config.py  OldParticleFlow_Config.py  ParticleFlow_Config.py  RecoParticles.py
Phys/JetAccessories/src/: ClearDaughters.cpp  ClearDaughters.h  HighPtIsoLeptonAndTagPV.cpp  HighPtIsoLeptonAndTagPV.h  HltJetBuilder.cpp  HltJetBuilder.h  HltParticleFlow.cpp  HltParticleFlow.h  PFJetMakerAlg.cpp  PFParticle.cpp  PFlowProtoFilter.cpp  ParticleFlow.cpp  ParticleFlow.h  ParticleFlow4Jets.cpp  ParticleFlow4Jets.h  SplitJets.cpp  UpdateJetsWithVtx.cpp  VBVertexRequirement.cpp  VBVertexRequirement.h
Phys/JetTagging/: CMakeLists.txt
Phys/JetTagging/data/bdt_configs/: LHCb_ANA_2014_076_BDT0.weights.xml  LHCb_ANA_2014_076_BDT1.weights.xml
Phys/JetTagging/dict/: JetTaggingInterface.h  JetTaggingInterface.xml
Phys/JetTagging/include/Kernel/: IJetTagTool.h
Phys/JetTagging/src/: FilterJet.cpp  FilterJet.h  LoKiBDTTag.cpp  LoKiBDTTag.h  LoKiElectronTag.cpp  LoKiElectronTag.h  LoKiIPTag.cpp  LoKiIPTag.h  LoKiMuonTag.cpp  LoKiMuonTag.h  LoKiSVTag.cpp  LoKiSVTag.h  LoKiSeedFinderNTrks.cpp  LoKiSeedFinderNTrks.h  LoKiTopoTag.cpp  LoKiTopoTag.h  LoKiTopoTagDir.cpp  LoKiTopoTagDir.h
Phys/LoKiJets/: CMakeLists.txt
Phys/LoKiJets/python/LoKiJets/: StdJets_Configuration.py  __init__.py
Phys/LoKiJets/src/: LoKiConstituentSub.cpp  LoKiConstituentSub.h  LoKiConstituentSubtractor.cpp  LoKiConstituentSubtractor.h  LoKiFastJetMaker.cpp  LoKiFastJetMaker.h  LoKiFastJetWithAreaMaker.cpp  LoKiJetMakerAlg.cpp  LoKiJetMakerWR2VtxAlg.cpp  LoKiJetParticleMaker.cpp  LoKiJets2JetsAlg.cpp  LoKiSeedConeJetMaker.cpp  LoKiSeedConeJetMaker.h  LoKiSeedFinder.cpp  LoKiSeedFinder.h  LoKiVVSeedFinder.cpp  LoKiVVSeedFinder.h  LokiConstituentSubtractor.cpp
Phys/ParticleCombiners/: CMakeLists.txt
Phys/ParticleCombiners/doc/: release.notes
Phys/ParticleCombiners/src/: CombineParticles.cpp  CombineParticles.h  Counters.h  NBodyDecays.cpp
cmake/: DaVinciDevDependencies.cmake
(+4 files in other folders)
